--- a/backend01/package.json
+++ b/backend01/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.2.1",
+    "bcryptjs": "^3.0.2",
     "hono": "^4.6.10",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
     "prisma": "^6.5.0",
-    "wrangler": "^3.83.0"
+    "wrangler": "^4.4.0"
   }
 }
