--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toggle": "^1.1.3",
+    "@reduxjs/toolkit": "^2.7.0",
     "@tiptap/extension-code-block-lowlight": "^2.11.7",
     "@tiptap/extension-highlight": "^2.11.7",
     "@tiptap/extension-image": "^2.11.7",
@@ -31,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
