--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.56.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2",
