--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": " npx nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development npx nodemon src/index.ts",
+    "pro": "cross-env NODE_ENV=production npx nodemon src/index.ts",
+    "build": "tsc && npx prisma generate",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/authenticator": "^1.1.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/multer": "^1.4.12"
+    "@types/multer": "^1.4.12",
+    "authenticator": "^1.1.5"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
@@ -26,11 +30,13 @@
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "prisma": "^6.6.0",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "twilio": "^5.5.2"
   }
 }
