--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
