--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,9 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "noImplicitAny" : false,
+    "noUnusedLocals": false,
+    noUnusedParameters: false,
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
