--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "highlight.js": "^11.11.1",
+    "input-otp": "^1.4.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
