--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "prisma": "^6.6.0",
+    "redis": "^5.0.1",
     "ts-node": "^10.9.2",
     "twilio": "^5.5.2"
   }
