--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/dotenv": "^6.1.1",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
     "cookie-parser": "^1.4.7",
@@ -35,6 +36,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3",
     "prisma": "^6.6.0",
     "redis": "^5.0.1",
     "ts-node": "^10.9.2",
