--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,10 +35,12 @@
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "highlight.js": "^11.11.1",
     "input-otp": "^1.4.2",
+    "js-cookies": "^1.0.4",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
@@ -59,12 +61,14 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/axios": "^0.9.36",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "axios": "^1.8.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
+    "jwt-decode": "^4.0.0",
     "sass": "^1.89.0",
     "tailwindcss": "^4",
     "typescript": "^5"
